Only show arrow for external links

--- a/packages/frontend/src/scss/components/menu.scss
+++ b/packages/frontend/src/scss/components/menu.scss
@@ -47,7 +47,7 @@
   color: var(--color-fg-1);
   background-color: var(--color-fg-5);
 }
-.menu .menu__links a:after {
+.menu .menu__links [target='_blank']:after {
   content: ' ↗';
 }
 
