--- a/packages/frontend/src/scss/components/sidebar-toggle-button.scss
+++ b/packages/frontend/src/scss/components/sidebar-toggle-button.scss
@@ -1,4 +1,4 @@
-.menu-toggle-button {
+.sidebar-toggle-button {
   position: fixed;
   top: 0;
   right: 0;
@@ -9,41 +9,45 @@
   border-bottom: 1px solid var(--color-fg-4);
 }
 
-.menu-toggle-button__button {
+.sidebar-toggle-button__button {
   display: block;
   padding: var(--button-padding);
   color: var(--color-fg-3);
   cursor: pointer;
 }
-.menu-toggle-button__button:hover {
+.sidebar-toggle-button__button:hover {
   color: var(--color-fg-2);
 }
-.menu-toggle-button__button:focus {
+.sidebar-toggle-button__button:focus {
   color: var(--color-fg-1);
   outline: 0;
 }
 
-.menu-toggle-button__svg {
+.sidebar-toggle-button__svg {
   width: var(--button-svg-height);
   height: var(--button-svg-height);
 }
 
-.menu-toggle-button__menu {
+.sidebar-toggle-button__menu {
   display: block;
 }
-.--menu-visible .menu-toggle-button__menu {
+.--sidebar-visible .sidebar-toggle-button__menu {
   display: none;
 }
 
-.menu-toggle-button__close {
+.sidebar-toggle-button__close {
   display: none;
 }
-.--menu-visible .menu-toggle-button__close {
+.--sidebar-visible .sidebar-toggle-button__close {
   display: block;
 }
 
 @media (min-width: $breakpoint-md) {
-  .menu-toggle-button--links-only .menu-toggle-button__button {
+  .sidebar-toggle-button__button {
+    border-right: 1px solid var(--color-fg-4);
+  }
+
+  .sidebar-toggle-button--links-only .sidebar-toggle-button__button {
     visibility: hidden;
   }
 }
