--- a/packages/frontend/src/scss/components/menu-toggle-button.scss
+++ b/packages/frontend/src/scss/components/menu-toggle-button.scss
@@ -1,4 +1,4 @@
-.sidebar-toggle-button {
+.menu-toggle-button {
   position: fixed;
   top: 0;
   right: 0;
@@ -9,41 +9,41 @@
   border-bottom: 1px solid var(--color-fg-4);
 }
 
-.sidebar-toggle-button__button {
+.menu-toggle-button__button {
   display: block;
   padding: var(--button-padding);
   color: var(--color-fg-3);
   cursor: pointer;
 }
-.sidebar-toggle-button__button:hover {
+.menu-toggle-button__button:hover {
   color: var(--color-fg-2);
 }
-.sidebar-toggle-button__button:focus {
+.menu-toggle-button__button:focus {
   color: var(--color-fg-1);
   outline: 0;
 }
 
-.sidebar-toggle-button__svg {
+.menu-toggle-button__svg {
   width: var(--button-svg-height);
   height: var(--button-svg-height);
 }
 
-.sidebar-toggle-button__menu {
+.menu-toggle-button__menu {
   display: block;
 }
-.--sidebar-visible .sidebar-toggle-button__menu {
+.--menu-visible .menu-toggle-button__menu {
   display: none;
 }
 
-.sidebar-toggle-button__close {
+.menu-toggle-button__close {
   display: none;
 }
-.--sidebar-visible .sidebar-toggle-button__close {
+.--menu-visible .menu-toggle-button__close {
   display: block;
 }
 
 @media (min-width: $breakpoint-md) {
-  .sidebar-toggle-button--links-only .sidebar-toggle-button__button {
+  .menu-toggle-button--links-only .menu-toggle-button__button {
     visibility: hidden;
   }
 }
