--- a/packages/frontend/src/scss/components/menu.scss
+++ b/packages/frontend/src/scss/components/menu.scss
@@ -11,17 +11,19 @@
   background-color: var(--color-bg);
 }
 
-.--sidebar-visible .menu {
+.--menu-visible .menu {
   display: block;
 }
 
-.menu__wrapper {
+.menu__top-bar {
   padding: var(--size-2) 0;
-  border-bottom: 1px solid red;
 }
 
 .menu__toc {
   padding: var(--size-2) 0;
+}
+.menu__top-bar + .menu__toc {
+  border-top: 1px solid var(--color-fg-4);
 }
 
 .menu a {
@@ -47,7 +49,8 @@
   color: var(--color-fg-1);
   background-color: var(--color-fg-5);
 }
-.menu .menu__wrapper [target='_blank']:after {
+
+.menu__top-bar [target='_blank']:after {
   content: ' ↗';
 }
 
@@ -82,10 +85,10 @@
     background-color: transparent;
   }
 
-  .menu__wrapper {
+  .menu__top-bar {
     position: fixed;
     top: 0;
-    right: 0;
+    right: var(--size-4);
     left: var(--button-height);
     z-index: var(--z-index-2);
     display: flex;
@@ -93,31 +96,20 @@
     overflow-x: auto;
     border-bottom: 0;
   }
-  .menu__wrapper > ul:first-child {
+  .menu__top-bar > ul:first-child {
     flex-grow: 1;
   }
 
-  .menu__wrapper > ul {
+  .menu__top-bar > ul {
     display: flex;
     flex-shrink: 0;
     justify-content: flex-end;
   }
 
-  .menu .menu__wrapper a {
+  .menu .menu__top-bar a {
     padding: calc((var(--button-height) - var(--line-height-sm)) / 2)
       var(--size-2);
     white-space: nowrap;
-  }
-  .menu .menu__wrapper ul:first-child li:first-child a {
-    padding-left: var(--size-4);
-  }
-  .menu .menu__wrapper ul:last-child li:last-child a {
-    padding-right: var(--size-4);
-  }
-
-  .menu .menu__wrapper .menu__item--active,
-  .menu .menu__wrapper .menu__item--active:hover {
-    background-color: transparent;
   }
 
   .menu__toc {
@@ -131,7 +123,10 @@
     background-color: var(--color-bg);
     border-right: 1px solid var(--color-fg-4);
   }
-  .--sidebar-visible .menu__toc {
+  .menu__top-bar + .menu__toc {
+    border-top: 0;
+  }
+  .--menu-visible .menu__toc {
     display: block;
   }
 }
