--- a/packages/frontend/src/scss/components/menu.scss
+++ b/packages/frontend/src/scss/components/menu.scss
@@ -45,19 +45,10 @@
 }
 .menu a:focus-visible {
   color: var(--color-focus-keyboard-fg);
-  background-color: var(--color-focus-keyboard-bg);
 }
 .menu .menu__item--active,
 .menu .menu__item--active:hover {
   color: var(--color-fg-1);
-}
-
-.menu .menu__toc a:focus {
-  background-color: var(--color-fg-6);
-}
-.menu .menu__toc .menu__item--active,
-.menu .menu__toc .menu__item--active:hover {
-  background-color: var(--color-fg-5);
 }
 
 .menu__top-bar [target='_blank']:after {
@@ -135,7 +126,8 @@
     bottom: 0;
     left: 0;
     display: none;
-    width: var(--toc-width);
+    min-width: var(--toc-min-width);
+    max-width: var(--toc-max-width);
     overflow-y: auto;
     background-color: var(--color-bg);
     border-right: 1px solid var(--color-fg-4);
@@ -152,5 +144,11 @@
   .menu__toc a {
     padding-top: var(--size-1);
     padding-bottom: var(--size-1);
+  }
+}
+
+@media (min-width: $breakpoint-xxl) {
+  .menu__toc {
+    border-right: 0;
   }
 }
