--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -44,6 +44,9 @@
   --size-14: 3.5rem;
   --size-15: 3.75rem;
   --size-16: 4rem;
+  --size-17: 4.25rem;
+  --size-18: 4.5rem;
+  --size-19: 4.75rem;
   --size-20: 5rem;
   --size-24: 6rem;
   --size-64: 16rem;
