--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -7,13 +7,15 @@
   --color-fg-4: #e2e2e2;
   --color-fg-5: #f4f4f4;
   --color-fg-6: #fbfbfb;
-  --color-blue-1: #3171d8;
-  --color-green-1: #178a6a;
-  --color-green-2: #033a16;
-  --color-purple-1: #7c4fa9;
-  --color-red-1: #d23b44;
-  --color-red-2: #67060c;
-  --color-yellow-1: #935c25;
+  --color-blue: #005cc5;
+  --color-green: #22863a;
+  --color-orange: #f9826c;
+  --color-purple: #6f42c1;
+  --color-red: #d73a49;
+  --color-addition-fg: #22863a;
+  --color-addition-bg: #f0fff4;
+  --color-deletion-fg: #b31d28;
+  --color-deletion-bg: #ffeef0;
   --color-focus-keyboard-bg: #fee81e;
   --color-focus-keyboard-fg: #000;
   --color-selection-bg: rgba(0, 0, 0, 0.99);
@@ -68,13 +70,15 @@
     --color-fg-4: #2f2f2f;
     --color-fg-5: #1a1a1a;
     --color-fg-6: #121212;
-    --color-blue-1: #7ad0da;
-    --color-green-1: #96dca5;
-    --color-green-2: #033a16;
-    --color-purple-1: #8ca7ff;
-    --color-red-1: #f57d8f;
-    --color-red-2: #67060c;
-    --color-yellow-1: #d6c599;
+    --color-blue: #79c0ff;
+    --color-green: #7ee787;
+    --color-orange: #ffa657;
+    --color-purple: #d2a8ff;
+    --color-red: #ff7b72;
+    --color-addition-fg: #aff5b4;
+    --color-addition-bg: #033a16;
+    --color-deletion-fg: #ffdcd7;
+    --color-deletion-bg: #67060c;
     --color-selection-bg: rgba(255, 255, 255, 0.99);
     --color-selection-fg: #000;
   }
