--- a/packages/frontend/src/scss/components/content.scss
+++ b/packages/frontend/src/scss/components/content.scss
@@ -101,6 +101,7 @@
 
 .content__inner > blockquote,
 .content__inner > p,
+.content__inner div p,
 .content__inner > ul,
 .content__inner > ol {
   margin-top: var(--size-2);
