Make scrollbars dark

--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -63,6 +63,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
     --color-bg: #000;
     --color-fg-1: #fff;
     --color-fg-2: #bfbfbf;
