--- a/packages/frontend/src/scss/components/content.scss
+++ b/packages/frontend/src/scss/components/content.scss
@@ -67,16 +67,12 @@
 .header-link:hover {
   color: var(--color-fg-2);
 }
-.header-link:focus {
-  color: var(--color-fg-1);
-  outline: 0;
-}
 
 .content hr {
   width: 100%;
   height: 1px;
   margin-top: var(--size-12);
-  background-color: var(--color-fg-1);
+  background-color: var(--color-fg-4);
   border: 0;
 }
 
@@ -88,15 +84,6 @@
 }
 .content a:not(.header-link):hover {
   text-decoration: none;
-}
-.content a:not(.header-link):focus {
-  color: var(--color-focus-keyboard-fg);
-  text-decoration: none;
-  background-color: var(--color-focus-keyboard-bg);
-  outline: 0;
-}
-.content a:not(.header-link):focus code {
-  background-color: transparent;
 }
 
 .content__inner > blockquote,
@@ -133,17 +120,17 @@
 
 .content blockquote {
   position: relative;
-  padding-left: var(--size-7);
+  padding: var(--size-2) 0 var(--size-2) var(--size-7);
+  color: var(--color-fg-3);
 }
 .content blockquote:before {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 6px;
+  left: 2px;
   display: block;
-  width: 3px;
-  border-right: 2px solid var(--color-fg-1);
-  border-left: 2px solid var(--color-fg-1);
+  width: 1px;
+  background-color: var(--color-fg-4);
   content: '';
 }
 
