--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -32,6 +32,7 @@
     monospace;
   --font-weight-regular: normal;
   --font-weight-bold: bold;
+  --font-size-code: 90%;
   --font-size-sm: 0.8rem;
   --font-size-md: 1rem;
   --line-height-sm: 1.2rem;
