--- a/packages/frontend/src/scss/variables.scss
+++ b/packages/frontend/src/scss/variables.scss
@@ -11,14 +11,9 @@
   --color-fg-1: #000;
   --color-fg-2: #404040;
   --color-fg-3: #7f7f7f;
-  --color-fg-4: #e2e2e2;
-  --color-fg-5: #f4f4f4;
-  --color-fg-6: #fbfbfb;
-  --color-blue: #005cc5;
-  --color-green: #22863a;
-  --color-orange: #f9826c;
-  --color-purple: #6f42c1;
-  --color-red: #d73a49;
+  --color-fg-4: #e0e0e0;
+  --color-fg-5: #f6f6f6;
+  --color-accent: #946709;
   --color-addition-fg: #22863a;
   --color-addition-bg: #f0fff4;
   --color-deletion-fg: #b31d28;
@@ -72,14 +67,9 @@
     --color-fg-1: #fff;
     --color-fg-2: #bfbfbf;
     --color-fg-3: #7f7f7f;
-    --color-fg-4: #2f2f2f;
-    --color-fg-5: #1a1a1a;
-    --color-fg-6: #121212;
-    --color-blue: #79c0ff;
-    --color-green: #7ee787;
-    --color-orange: #ffa657;
-    --color-purple: #d2a8ff;
-    --color-red: #ff7b72;
+    --color-fg-4: #282828;
+    --color-fg-5: #121212;
+    --color-accent: #f7eab2;
     --color-addition-fg: #aff5b4;
     --color-addition-bg: #033a16;
     --color-deletion-fg: #ffdcd7;
