--- a/packages/frontend/src/scss/components/menu.scss
+++ b/packages/frontend/src/scss/components/menu.scss
@@ -1,159 +1,77 @@
 .menu {
   position: fixed;
-  top: var(--button-height);
-  right: 0;
+  top: var(--top-bar-height); // `.top-bar` height
   bottom: 0;
   left: 0;
   display: none;
+  width: 100%;
+  padding: var(--size-3) 0;
   overflow-y: auto;
   font-size: var(--font-size-md);
   line-height: var(--line-height-md);
-  background-color: var(--color-bg);
+  background-color: var(--color-bg-1);
+  border-right: 1px solid var(--color-fg-5);
 }
-
 .--menu-visible .menu {
   display: block;
-}
-
-.menu__top-bar {
-  padding: var(--size-2) 0;
-}
-.menu__title,
-.menu__sections {
-  display: none;
-}
-
-.menu__toc {
-  padding: var(--size-2) 0;
-}
-.menu__top-bar + .menu__toc {
-  border-top: 1px solid var(--color-fg-4);
 }
 
 .menu a {
   position: relative;
   display: block;
-  padding: var(--size-2) var(--size-4);
+  padding: var(--size-1) var(--size-4);
   color: var(--color-fg-3);
   overflow-wrap: break-word;
 }
-.menu a:hover {
+.menu li li a {
+  padding-left: var(--size-8);
+}
+.menu li li li a {
+  padding-left: var(--size-10);
+}
+.menu li li li li a {
+  padding-left: var(--size-12);
+}
+.menu li li li li li a {
+  padding-left: var(--size-14);
+}
+.menu li li li li li li a {
+  padding-left: var(--size-16);
+}
+.menu a:not(.scroll-spy-active):hover {
   color: var(--color-fg-2);
 }
 .menu a:focus-visible {
-  color: var(--color-bg);
+  color: var(--color-bg-1);
   background-color: var(--color-fg-1);
   outline: 0;
 }
-.menu .menu__item--active,
-.menu .menu__item--active:hover {
+.menu a[target='_blank']:after {
+  content: ' ↗';
+}
+.menu .--scroll-spy-active {
   color: var(--color-fg-1);
 }
 
-.menu__top-bar [target='_blank']:after {
-  content: ' ↗';
-}
-
-.menu__toc li li a {
-  padding-left: var(--size-7);
-}
-.menu__toc li li li a {
-  padding-left: var(--size-10);
-}
-.menu__toc li li li li a {
-  padding-left: var(--size-13);
-}
-.menu__toc li li li li li a {
-  padding-left: var(--size-16);
-}
-.menu__toc li li li li li li a {
-  padding-left: var(--size-19);
-}
-
-.menu__toc code {
+.menu code {
   font-size: var(--font-size-code);
   font-family: var(--font-family-code);
 }
 
 @media (min-width: $breakpoint-lg) {
   .menu {
-    position: static;
-    display: block;
-    overflow-y: visible;
+    width: var(--toc-width);
     font-size: var(--font-size-sm);
     line-height: var(--line-height-sm);
-    background-color: transparent;
   }
 
-  .menu__top-bar {
-    position: fixed;
-    top: 0;
-    right: var(--size-4);
-    left: var(--button-height);
-    z-index: var(--z-index-2);
-    display: flex;
-    padding: 0;
-    overflow-x: auto;
-    border-bottom: 0;
-  }
-
-  .menu__title,
-  .menu__sections {
-    display: block;
-  }
-
-  .menu__sections {
-    display: flex;
-    flex-grow: 1;
-    justify-content: flex-end;
-  }
-  .menu__title {
-    flex-grow: 1;
-  }
-  .menu__sections ul {
-    display: flex;
-  }
-
-  .menu__links ul {
-    display: flex;
-  }
-
-  .menu__top-bar a {
-    padding: calc((var(--button-height) - var(--line-height-sm)) / 2)
-      var(--size-2);
-    white-space: nowrap;
-  }
-  .menu__title a {
-    display: inline-block;
-  }
-
-  .menu__toc {
-    position: fixed;
-    top: var(--button-height);
-    bottom: 0;
-    left: 0;
+  .menu__links {
     display: none;
-    min-width: var(--toc-min-width);
-    max-width: var(--toc-max-width);
-    overflow-y: auto;
-    background-color: var(--color-bg);
-    border-right: 1px solid var(--color-fg-4);
-  }
-  .menu__top-bar + .menu__toc {
-    border-top: 0;
-  }
-  .--menu-visible .menu__toc {
-    display: block;
-  }
-
-  .menu__toc a {
-    padding-top: var(--size-1);
-    padding-bottom: var(--size-1);
   }
 }
 
 @media (min-width: $breakpoint-xxl) {
-  .menu__toc {
+  .menu {
     border-right: 0;
   }
 }
