--- a/packages/frontend/src/scss/components/menu.scss
+++ b/packages/frontend/src/scss/components/menu.scss
@@ -73,8 +73,9 @@
   }
 }
 
-@media (min-width: $breakpoint-xxl) {
+@media (min-width: $breakpoint-xl) {
   .menu {
+    display: block;
     border-right: 0;
   }
 }
