--- a/packages/frontend/src/scss/components/top-bar.scss
+++ b/packages/frontend/src/scss/components/top-bar.scss
@@ -28,7 +28,7 @@
   color: var(--color-fg-1);
 }
 
-.top-bar__toggle-button {
+.top-bar__menu-toggle-button {
   position: relative; // stack this above `.top-bar__title`
   display: flex;
   align-items: center;
@@ -38,32 +38,32 @@
   color: var(--color-fg-3);
   cursor: pointer;
 }
-.top-bar__toggle-button:hover {
+.top-bar__menu-toggle-button:hover {
   color: var(--color-fg-2);
 }
-.top-bar__toggle-button:focus {
+.top-bar__menu-toggle-button:focus {
   outline: 0;
 }
-.top-bar__toggle-button:focus-visible {
+.top-bar__menu-toggle-button:focus-visible {
   color: var(--color-bg-1);
   background-color: var(--color-fg-1);
   outline: 0;
 }
-.top-bar__toggle-button-menu-svg,
-.top-bar__toggle-button-close-svg {
+.top-bar__menu-toggle-button-menu-svg,
+.top-bar__menu-toggle-button-close-svg {
   width: var(--font-size-md);
   height: var(--font-size-md);
 }
-.top-bar__toggle-button-menu-svg {
+.top-bar__menu-toggle-button-menu-svg {
   display: block;
 }
-.--menu-visible .top-bar__toggle-button-menu-svg {
+.--menu-visible .top-bar__menu-toggle-button-menu-svg {
   display: none;
 }
-.top-bar__toggle-button-close-svg {
+.top-bar__menu-toggle-button-close-svg {
   display: none;
 }
-.--menu-visible .top-bar__toggle-button-close-svg {
+.--menu-visible .top-bar__menu-toggle-button-close-svg {
   display: block;
 }
 
@@ -85,7 +85,8 @@
   display: none;
   padding-right: var(--size-2);
 }
-.top-bar__items > ul {
+.top-bar__items div,
+.top-bar__items ul {
   display: flex;
 }
 .top-bar__items a {
