--- a/packages/frontend/src/scss/components/content.scss
+++ b/packages/frontend/src/scss/components/content.scss
@@ -22,7 +22,7 @@
   font-weight: var(--font-weight-bold);
 }
 .content h1 {
-  margin-top: var(--size-16);
+  margin-top: var(--size-20);
   margin-bottom: var(--size-4);
   font-weight: var(--font-weight-bold);
   font-size: var(--size-8);
@@ -30,19 +30,19 @@
   letter-spacing: -0.0625rem;
 }
 .content h2 {
-  margin-top: var(--size-8);
+  margin-top: var(--size-12);
   font-size: var(--size-6);
   line-height: var(--size-9);
   letter-spacing: -0.03125rem;
 }
 .content h3 {
-  margin-top: var(--size-6);
+  margin-top: var(--size-8);
   font-size: var(--size-5);
   line-height: var(--size-8);
   letter-spacing: -0.03125rem;
 }
 .content h4 {
-  margin-top: var(--size-4);
+  margin-top: var(--size-6);
   font-size: var(--size-4);
 }
 .content h5 {
@@ -99,8 +99,9 @@
 .content__inner > p,
 .content__inner div p,
 .content__inner > ul,
-.content__inner > ol {
-  margin-top: var(--size-2);
+.content__inner > ol,
+.content__inner > table {
+  margin-top: var(--size-4);
 }
 
 .content li {
