--- a/packages/frontend/src/scss/components/top-bar.scss
+++ b/packages/frontend/src/scss/components/top-bar.scss
@@ -7,13 +7,15 @@
   display: flex;
   overflow-x: auto;
   font-size: var(--font-size-md);
-  line-height: 1;
+  line-height: var(--top-bar-height);
   white-space: nowrap;
   background-color: var(--color-bg-1);
   border-bottom: 1px solid var(--color-fg-5);
 }
 
 .top-bar a {
+  display: block;
+  padding: 0 var(--size-2);
   color: var(--color-fg-3);
 }
 .top-bar a:not(.--scroll-spy-active):hover {
@@ -72,9 +74,8 @@
   padding-left: var(--size-2);
   color: var(--color-fg-3);
 }
-.top-bar__title-link {
+.top-bar .top-bar__title-link {
   display: inline-block;
-  padding: var(--size-5) var(--size-2);
 }
 .top-bar__title-version {
   display: inline-block;
@@ -83,30 +84,30 @@
 
 .top-bar__items {
   display: none;
-  padding-right: var(--size-2);
-}
-.top-bar__items > ul {
-  display: flex;
-}
-.top-bar__items a {
-  display: block;
-  padding: var(--size-5) var(--size-2);
-}
-.top-bar__items a[target='_blank']:after {
-  content: ' ↗';
 }
 
 @media (min-width: $breakpoint-lg) {
-  .--no-toc .top-bar__toggle-button {
+  .top-bar {
+    font-size: var(--font-size-sm);
+  }
+  .--no-toc .top-bar__menu-toggle-button {
     display: none;
   }
   .top-bar__items {
     display: flex;
+    padding-right: var(--size-2);
+  }
+  .top-bar__items > ul,
+  .top-bar__items > ul li {
+    display: flex;
+  }
+  .top-bar__items a[target='_blank']:after {
+    content: ' ↗';
   }
 }
 
 @media (min-width: $breakpoint-xl) {
-  .top-bar__toggle-button {
+  .top-bar__menu-toggle-button {
     display: none;
   }
 }
