--- a/packages/frontend/src/scss/components/top-bar.scss
+++ b/packages/frontend/src/scss/components/top-bar.scss
@@ -10,10 +10,23 @@
   line-height: var(--top-bar-height);
   white-space: nowrap;
   background-color: var(--color-bg-1);
-  border-bottom: 1px solid var(--color-fg-5);
+}
+
+.top-bar:before {
+  position: fixed;
+  top: var(--top-bar-height);
+  right: 0;
+  left: 0;
+  display: block;
+  height: 1px;
+  background-color: var(--color-fg-5);
+  content: '';
+  pointer-events: none;
 }
 
 .top-bar a {
+  position: relative;
+  z-index: var(--z-index-1);
   display: block;
   padding: 0 var(--size-2);
   color: var(--color-fg-3);
@@ -28,6 +41,7 @@
 }
 .top-bar .--scroll-spy-active {
   color: var(--color-fg-1);
+  border-bottom: 1px solid var(--color-fg-1);
 }
 
 .top-bar__menu-toggle-button {
